[package]
name = "fc-cli"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier CLI interface"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ethereum-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# substrate client
sc-cli = { workspace = true }
# substrate primitives
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }

# frontier client
fc-db = { workspace = true }
# frontier primitives
fp-rpc = { workspace = true, features = ["std"] }
fp-storage = { workspace = true, features = ["std"] }

[dev-dependencies]
codec = { package = "parity-scale-codec", workspace = true }
futures = "0.3.21"
tempfile = "3.3.0"
# Substrate
sc-block-builder = { workspace = true }
sc-client-db = { workspace = true }
sp-consensus = { workspace = true }
sp-io = { workspace = true }
substrate-test-runtime-client = { workspace = true }
# Frontier
frontier-template-runtime = { path = "../../template/runtime" }
