[package]
name = "fc-consensus"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Tokfin consensus for substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
# Substrate
sc-consensus = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true, features = ["default"] }
sp-consensus = { workspace = true }
sp-runtime = { workspace = true }
# Tokfin
fp-consensus = { workspace = true, features = ["default"] }
fp-rpc = { workspace = true, features = ["default"] }
