[package]
name = "fc-log-indexer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier receipt log indexer"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
futures = "0.3.24"
futures-timer = "3.0.2"
log = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "any", "offline" ] }
tokio = { version = "1.19", features = [ "macros", "sync" ] }
ethereum = { version = "0.12.0", features = ["with-codec"] }

# Frontier
fc-rpc = { version = "2.0.0-dev", path = "../rpc" }

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
tempfile = "3.3.0"
# Frontier
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }
# Substrate
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
ethereum-types = { version = "0.13.1" }

[features]
default = [ "sqlx/sqlite" ]
sqlite = [ "sqlx/sqlite" ]
postgres = [ "sqlx/postgres" ]
