[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Mapping sync logic for Frontier."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.25"
futures-timer = "3.0.2"
log = "0.4.17"
parking_lot = "0.12.1"
tokio = { version = "1.19", features = ["macros", "sync"], optional = true }
# Substrate
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true, features = ["default"] }
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true }
# Frontier
fc-db = { workspace = true }
fc-storage = { workspace = true }
fp-consensus = { workspace = true, features = ["default"] }
fp-rpc = { workspace = true, features = ["default"] }

[features]
sql = [
	"tokio",
	"sp-core",
	"fc-db/sql",
]

[dev-dependencies]
ethereum = { workspace = true }
ethereum-types = { workspace = true }
scale-codec = { package = "parity-scale-codec", workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite"] }
tempfile = "3.3.0"
tokio = { version = "1.24", features = ["sync"] }
# Substrate
sc-block-builder = { workspace = true }
sc-client-db = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true, features = ["default"] }
sp-io = { workspace = true }
substrate-test-runtime-client = { workspace = true }
# Frontier
fc-rpc = { workspace = true }
fp-consensus = { workspace = true, features = ["default"] }
fp-storage = { workspace = true, features = ["default"] }
frontier-template-runtime = { workspace = true, features = ["default"] }
