[package]
name = "fc-rpc-core"
version = "1.1.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "RPC traits of Ethereum."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
ethereum = { version = "0.11.1", features = ["with-codec", "with-serde"] }
ethereum-types = "0.12"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-pubsub = "18.0"
rlp = "0.5"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
