[package]
name = "fc-rpc-core"
version = "1.1.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "RPC traits of Ethereum."
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.12.0", features = ["with-codec", "with-serde"] }
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parity
ethereum-types = "0.13.1"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
rlp = "0.5"
