[package]
name = "fc-rpc-test-vectors"
version = "0.1.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Replay-based JSON-RPC compatibility tests for Frontier, sourced from ethereum/execution-apis."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
ureq = { version = "2", default-features = false }

[dev-dependencies]
tempfile = "3.21.0"

[features]
# Opt-in for the live-RPC integration test. Off by default so `cargo test`
# stays self-contained (unit tests + upstream parser smoke). CI enables this
# feature in the integration-test job, which already builds the node binary.
e2e = []

[[test]]
name = "replay_template_node"
path = "tests/replay_template_node.rs"
required-features = ["e2e"]
