[package]
name = "frontier-consensus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Frontier consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
sp-std = { version = "2.0.0-rc6", default-features = false, path = "../../vendor/substrate/primitives/std" }
sp-runtime = { version = "2.0.0-rc6", default-features = false, path = "../../vendor/substrate/primitives/runtime" }
sp-core = { version = "2.0.0-rc6", default-features = false, path = "../../vendor/substrate/primitives/core" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
]
