[package]
name = "pallet-base-fee"
version = "1.0.0"
license = "Apache-2.0"
description = "EIP-1559 fee utils."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }
# substrate frame
frame-support = { workspace = true }
frame-system = { workspace = true }

# frontier
fp-evm = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	# substrate primitives
	"sp-core/std",
	"sp-runtime/std",
	# substrate frame
	"frame-support/std",
	"frame-system/std",
	# frontier
	"fp-evm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
